slight layout bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
 body{
-    margin: 20px;
-
+    margin: 0;
 }
 
 #main-section{
     display: grid;
     grid-template-columns: 0.4fr 1fr;
     height: 100vh;
-    row-gap: 20px;
-      column-gap: 20px;
 }
 
 @media (max-width: 768px) {
